Login Page Designed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#DAA521</color>
     <color name="secondary">#F7ECD0</color>
+    <color name="transprant">#00F7ECD0</color>
 </resources>
