--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -164,6 +164,7 @@
                 android:textColor="@color/black"
                 android:layout_marginLeft="@dimen/_80sdp"/>
             <TextView
+                android:id="@+id/tv_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" Sign Up"
