--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
                 android:layout_width="152dp"
                 android:layout_height="171dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="@dimen/_100sdp"
+                android:layout_marginTop="@dimen/_70sdp"
                 android:src="@drawable/logo" />
         </LinearLayout>
 
@@ -35,7 +35,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_150sdp"
+                android:layout_marginTop="@dimen/_120sdp"
                 android:text="पोलीस भर्ती"
                 android:textColor="@color/primary"
                 android:textSize="@dimen/_25sdp"
@@ -71,7 +71,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_30sdp"
             android:text="Login"
             android:layout_gravity="center"
             android:textColor="@color/black"
@@ -102,12 +102,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="@dimen/_10sdp"
-                        android:id="@+id/mobile_number"
+                        android:id="@+id/mobile"
                         android:background="@color/transprant"
                         android:hint="Enter Mobile"
                         android:inputType="number"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+
 
 
         <androidx.cardview.widget.CardView
@@ -136,7 +138,7 @@
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:id="@+id/otp"
                     android:background="@color/transprant"
-                    android:hint="Enter OTP"
+                    android:hint="Enter Password"
                     android:inputType="number"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
