--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,7 +21,7 @@
             android:layout_width="152dp"
             android:layout_height="171dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="@dimen/_70sdp"
+            android:layout_marginTop="@dimen/_50sdp"
             android:src="@drawable/logo" />
     </LinearLayout>
 
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_120sdp"
+            android:layout_marginTop="@dimen/_100sdp"
             android:text="पोलीस भर्ती"
             android:textColor="@color/primary"
             android:textSize="@dimen/_25sdp"
@@ -52,7 +52,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:text="Sign Up"
         android:layout_gravity="center"
         android:textColor="@color/black"
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_60sdp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp">
 
@@ -102,6 +102,36 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:src="@drawable/otp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:id="@+id/password"
+                android:background="@color/transprant"
+                android:hint="Set Your Password"
+                android:inputType="number"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
                 android:layout_width="@dimen/_15sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:src="@drawable/mobile"
@@ -116,8 +146,50 @@
                 android:background="@color/transprant"
                 android:hint="Enter Mobile"
                 android:inputType="number"/>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:id="@+id/layout_send_otp"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_117sdp"
+        >
+        <TextView
+            android:id="@+id/tv_send_otp"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OTP send"
+            android:textColor="#00FF88"
+            android:layout_gravity="center_vertical"
+            />
+        <ProgressBar
+
+            android:layout_width="@dimen/_15sdp"
+            android:visibility="invisible"
+            android:layout_height="wrap_content"
+            android:id="@+id/pb_send_otp"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_gravity="center_vertical"
+
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+           android:text="Send OTP"
+            android:textSize="@dimen/_10sdp"
+            android:id="@+id/btn_send_otp"
+            android:layout_marginLeft="@dimen/_20sdp"
+          android:layout_gravity="top"
+            android:backgroundTint="@color/primary"
+            android:textColor="@color/black"/>
+
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
