Home Activity Designe

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="primary">#DAA521</color>
     <color name="secondary">#F7ECD0</color>
     <color name="transprant">#00F7ECD0</color>
+    <color name="blue">#01408C</color>
 </resources>
