--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,17 +3,349 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home Fragment"
-        android:textSize="30dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_200sdp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:background="@color/primary"
+        android:orientation="horizontal">
 
+
+        <ImageView
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginLeft="@dimen/_8sdp"
+            android:src="@drawable/dropelist"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="पोलीस भर्ती"
+            android:layout_gravity="center"
+            android:textSize="@dimen/_20sdp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="@dimen/_10sdp"/>
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/_55sdp"
+            app:cardCornerRadius="@dimen/_8sdp"
+            android:backgroundTint="@color/blue">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="जिल्हा निवडा"
+                android:textColor="@color/white"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:textSize="@dimen/_12sdp"/>
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/bell"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/_12sdp"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_margin="@dimen/_20sdp"
+                android:backgroundTint="@color/secondary"
+                app:cardCornerRadius="@dimen/_15sdp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="150dp"
+                        android:src="@drawable/mhpolicelogo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_3sdp"
+                        android:text="Maharashtra Police Bharti"
+                        android:textColor="@color/blue"
+                        android:textSize="@dimen/_17sdp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150sdp"
+                android:orientation="horizontal">
+
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="@dimen/_130sdp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:backgroundTint="@color/white"
+                    app:strokeColor="@color/primary">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_3sdp"
+                        android:backgroundTint="@color/white"
+                        app:strokeColor="@color/primary">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="@dimen/_80sdp"
+                                android:layout_height="@dimen/_70sdp"
+                                app:cardCornerRadius="@dimen/_10sdp"
+                                android:layout_margin="@dimen/_10sdp"
+                                android:backgroundTint="@color/secondary">
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+                        <ImageView
+                            android:layout_width="110dp"
+                            android:layout_height="96dp"
+                            android:layout_marginTop="40dp"
+                            android:layout_marginLeft="@dimen/_25sdp"
+                            android:src="@drawable/districwisequestion" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="District wise Ques "
+                            android:layout_gravity="bottom"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:textSize="@dimen/_14sdp"
+                            android:layout_marginLeft="@dimen/_7sdp"
+                            android:textStyle="bold"/>
+                    </com.google.android.material.card.MaterialCardView>
+                </com.google.android.material.card.MaterialCardView>
+
+
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="@dimen/_130sdp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:backgroundTint="@color/white"
+                    app:strokeColor="@color/primary">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_3sdp"
+                        android:backgroundTint="@color/white"
+                        app:strokeColor="@color/primary">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="@dimen/_80sdp"
+                                android:layout_height="@dimen/_70sdp"
+                                app:cardCornerRadius="@dimen/_10sdp"
+                                android:layout_margin="@dimen/_10sdp"
+                                android:backgroundTint="@color/secondary">
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+                        <ImageView
+                            android:layout_width="110dp"
+                            android:layout_height="96dp"
+                            android:layout_marginTop="40dp"
+                            android:layout_marginLeft="@dimen/_35sdp"
+                            android:src="@drawable/syllabus"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Syllabus"
+                            android:layout_gravity="bottom"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:textSize="@dimen/_14sdp"
+                            android:layout_marginLeft="@dimen/_35sdp"
+                            android:textStyle="bold"/>
+                    </com.google.android.material.card.MaterialCardView>
+                </com.google.android.material.card.MaterialCardView>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="@dimen/_130sdp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:backgroundTint="@color/white"
+                    app:strokeColor="@color/primary">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_3sdp"
+                        android:backgroundTint="@color/white"
+                        app:strokeColor="@color/primary">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="@dimen/_80sdp"
+                                android:layout_height="@dimen/_70sdp"
+                                android:layout_margin="@dimen/_10sdp"
+                                android:backgroundTint="@color/secondary"
+                                app:cardCornerRadius="@dimen/_10sdp"></androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="110dp"
+                            android:layout_height="96dp"
+                            android:layout_marginLeft="@dimen/_40sdp"
+                            android:layout_marginTop="40dp"
+                            android:src="@drawable/subjectwise" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:text="Subject Wise MCQ"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+                    </com.google.android.material.card.MaterialCardView>
+                </com.google.android.material.card.MaterialCardView>
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="@dimen/_130sdp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:backgroundTint="@color/white"
+                    app:strokeColor="@color/primary">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_3sdp"
+                        android:backgroundTint="@color/white"
+                        app:strokeColor="@color/primary">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="@dimen/_80sdp"
+                                android:layout_height="@dimen/_70sdp"
+                                android:layout_margin="@dimen/_10sdp"
+                                android:backgroundTint="@color/secondary"
+                                app:cardCornerRadius="@dimen/_10sdp"></androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="110dp"
+                            android:layout_height="96dp"
+                            android:layout_marginLeft="@dimen/_45sdp"
+                            android:layout_marginTop="40dp"
+                            android:src="@drawable/importants" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:layout_marginLeft="@dimen/_7sdp"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:text="Saved Importants"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+                    </com.google.android.material.card.MaterialCardView>
+                </com.google.android.material.card.MaterialCardView>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Join us on"
+                android:textSize="@dimen/_15sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_margin="@dimen/_15sdp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:src="@drawable/instagram"
+                    android:layout_gravity="center"/>
+                <ImageView
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_marginLeft="@dimen/_30sdp"
+                    android:src="@drawable/telegram"
+                    android:layout_gravity="center"/>
+                <ImageView
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:src="@drawable/whatsapp"
+                    android:layout_marginLeft="@dimen/_30sdp"
+                    android:layout_gravity="center"/>
+
+                <ImageView
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:src="@drawable/linkdin"
+                android:layout_marginLeft="@dimen/_30sdp"
+                android:layout_gravity="center"/>
+
+
+
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
