--- a/app/src/main/res/layout/activity_show_all_district_question.xml
+++ b/app/src/main/res/layout/activity_show_all_district_question.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/secondary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/secondary"
     android:orientation="vertical"
-    tools:context=".YearSelectforDistrictwiseActivity">
+    tools:context=".Show_All_District_questionActivity">
 
     <ImageView
         android:layout_width="@dimen/_25sdp"
@@ -16,14 +16,39 @@
         android:id="@+id/back"
         android:layout_margin="@dimen/_10sdp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show all district questions"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:textSize="@dimen/_15sdp"
+            android:textColor="@color/black"/>
+
+        <Switch
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginLeft="@dimen/_50sdp"/>
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Year"
-        android:layout_marginLeft="@dimen/_25sdp"
-        android:textSize="@dimen/_20sdp"
-        android:textColor="@color/black"
-        android:textStyle="bold|normal"/>
+        android:layout_marginTop="@dimen/_5sdp"
+        android:text="ON - Show all district qusetions"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:textSize="@dimen/_10sdp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OFF - Show only selected District Question"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:textSize="@dimen/_10sdp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +59,6 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="@dimen/_130sdp"
             android:layout_height="@dimen/_50sdp"
-            android:id="@+id/card_2019"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
@@ -42,8 +66,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="2019"
-                android:textSize="@dimen/_20sdp" />
+                android:text="बुद्धिमत्ता चाचणी"
+                android:textSize="@dimen/_16sdp" />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -57,8 +81,45 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="2018"
-                android:textSize="@dimen/_20sdp" />
+                android:text="गणित"
+                android:textSize="@dimen/_16sdp" />
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_20sdp"
+        android:orientation="horizontal">
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="@dimen/_130sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:id="@+id/marathi_card"
+            android:backgroundTint="@color/white"
+            app:strokeColor="@color/primary">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="मराठी"
+                android:textSize="@dimen/_16sdp" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="@dimen/_130sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:backgroundTint="@color/white"
+            app:strokeColor="@color/primary">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="चालू घडामोडी"
+                android:textSize="@dimen/_16sdp" />
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
@@ -78,8 +139,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="2017"
-                android:textSize="@dimen/_20sdp" />
+                android:text="भूमिती"
+                android:textSize="@dimen/_16sdp" />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -93,44 +154,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="2016"
-                android:textSize="@dimen/_20sdp" />
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_20sdp"
-        android:orientation="horizontal">
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
-            android:layout_height="@dimen/_50sdp"
-            android:backgroundTint="@color/white"
-            app:strokeColor="@color/primary">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="2015"
-                android:textSize="@dimen/_20sdp" />
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:backgroundTint="@color/white"
-            app:strokeColor="@color/primary">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="ALL"
-                android:textSize="@dimen/_20sdp" />
+                android:text="English"
+                android:textSize="@dimen/_16sdp" />
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
