--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,6 +8,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="@dimen/_70sdp"
         android:layout_height="@dimen/_70sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:layout_gravity="center"
         android:src="@drawable/logo"/>
 
