--- a/app/src/main/res/layout/activity_year_selectfor_districtwise.xml
+++ b/app/src/main/res/layout/activity_year_selectfor_districtwise.xml
@@ -32,23 +32,26 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_125sdp"
             android:layout_height="@dimen/_50sdp"
             android:id="@+id/card_2019"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:text="2019"
                 android:textSize="@dimen/_20sdp" />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_125sdp"
             android:layout_height="@dimen/_50sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:layout_marginLeft="@dimen/_15sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
@@ -57,6 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textColor="@color/black"
                 android:text="2018"
                 android:textSize="@dimen/_20sdp" />
         </com.google.android.material.card.MaterialCardView>
@@ -69,8 +73,9 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_125sdp"
             android:layout_height="@dimen/_50sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
@@ -78,14 +83,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textColor="@color/black"
                 android:text="2017"
                 android:textSize="@dimen/_20sdp" />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_125sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginLeft="@dimen/_15sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
@@ -93,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textColor="@color/black"
                 android:text="2016"
                 android:textSize="@dimen/_20sdp" />
         </com.google.android.material.card.MaterialCardView>
@@ -105,8 +113,9 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_125sdp"
             android:layout_height="@dimen/_50sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
 
@@ -115,12 +124,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="2015"
+                android:textColor="@color/black"
                 android:textSize="@dimen/_20sdp" />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_125sdp"
             android:layout_height="@dimen/_50sdp"
+            app:strokeWidth="@dimen/_1sdp"
             android:layout_marginLeft="@dimen/_15sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
@@ -129,6 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textColor="@color/black"
                 android:text="ALL"
                 android:textSize="@dimen/_20sdp" />
         </com.google.android.material.card.MaterialCardView>
