--- a/app/src/main/res/layout/activity_test_two.xml
+++ b/app/src/main/res/layout/activity_test_two.xml
@@ -5,9 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/secondary"
-    tools:context=".TestOneActivity">
+    android:orientation="vertical"
+    tools:context=".TestTwoActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Test 1"
+            android:text="Test 2"
             android:textSize="@dimen/_22sdp"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -85,17 +86,17 @@
             android:background="@color/white"
             android:orientation="horizontal">
 
-        <!-- Question Text -->
-        <TextView
-            android:id="@+id/tvQuestion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Question will appear here"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:padding="16dp" />
+            <!-- Question Text -->
+            <TextView
+                android:id="@+id/tvQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Question will appear here"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:padding="16dp" />
 
         </LinearLayout>
 
@@ -111,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_10sdp"
-                
+
                 android:backgroundTint="@color/primary"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -134,20 +135,22 @@
                 android:text="Previous"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_10sdp"/>
-        <Button
-            android:id="@+id/btnNext"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="@dimen/_60sdp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/primary"
-            android:layout_marginLeft="@dimen/_80sdp"
-            android:text="Next"
-            android:layout_marginRight="@dimen/_10sdp"/>
+            <Button
+                android:id="@+id/btnNext"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="@dimen/_60sdp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/primary"
+                android:layout_marginLeft="@dimen/_80sdp"
+                android:text="Next"
+                android:layout_marginRight="@dimen/_10sdp"/>
 
 
         </LinearLayout>
 
 
     </LinearLayout>
+
+
 
 </LinearLayout>
