--- a/app/src/main/res/layout/activity_test_six.xml
+++ b/app/src/main/res/layout/activity_test_six.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/secondary"
-    tools:context=".TestFiveActivity">
+    tools:context=".TestSixActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Test 5"
+            android:text="Test 6"
             android:textSize="@dimen/_22sdp"
             android:textColor="@color/black"
             android:textStyle="normal"
