core functionality completed

--- a/app/src/main/res/layout/activity_syllabus_pdf.xml
+++ b/app/src/main/res/layout/activity_syllabus_pdf.xml
@@ -26,7 +26,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_250sdp"
         app:strokeColor="@color/primary"
         app:strokeWidth="@dimen/_1sdp"
         app:cardCornerRadius="@dimen/_20sdp"
