--- a/app/src/main/res/layout/activity_subject_wise_question.xml
+++ b/app/src/main/res/layout/activity_subject_wise_question.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Subject Wise Questions"
+        android:layout_marginTop="@dimen/_50sdp"
         android:textSize="@dimen/_22sdp"
         android:textColor="@color/black"
         android:textStyle="normal"
@@ -35,7 +36,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_50sdp"
             android:backgroundTint="@color/white"
             android:id="@+id/buddtimatta_chachni_card"
@@ -53,20 +54,20 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:id="@+id/ganit_card"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginLeft="@dimen/_15sdp"
             android:backgroundTint="@color/white"
-            android:id="@+id/ganit_card"
-            app:strokeWidth="@dimen/_1sdp"
-            app:strokeColor="@color/primary">
+            app:strokeColor="@color/primary"
+            app:strokeWidth="@dimen/_1sdp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@color/black"
                 android:text="गणित"
+                android:textColor="@color/black"
                 android:textSize="@dimen/_16sdp" />
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
@@ -78,9 +79,10 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_50sdp"
             android:id="@+id/marathi_card"
+            android:layout_marginTop="@dimen/_20sdp"
             app:strokeWidth="@dimen/_1sdp"
             android:backgroundTint="@color/white"
             app:strokeColor="@color/primary">
@@ -95,13 +97,14 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
+            android:id="@+id/chalu_ghadamodi_card"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginLeft="@dimen/_15sdp"
-            app:strokeWidth="@dimen/_1sdp"
-            android:id="@+id/chalu_ghadamodi_card"
+            android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/white"
-            app:strokeColor="@color/primary">
+            app:strokeColor="@color/primary"
+            app:strokeWidth="@dimen/_1sdp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -113,46 +116,6 @@
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_20sdp"
-        android:orientation="horizontal">
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
-            android:layout_height="@dimen/_50sdp"
-            android:backgroundTint="@color/white"
-            app:strokeWidth="@dimen/_1sdp"
-            android:id="@+id/bhumati_card"
-            app:strokeColor="@color/primary">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="भूमिती"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16sdp" />
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="@dimen/_130sdp"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginLeft="@dimen/_15sdp"
-            app:strokeWidth="@dimen/_1sdp"
-            android:id="@+id/english_card"
-            android:backgroundTint="@color/white"
-            app:strokeColor="@color/primary">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="English"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16sdp" />
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
 
 </LinearLayout>
