--- a/app/src/main/res/layout/activity_test_one.xml
+++ b/app/src/main/res/layout/activity_test_one.xml
@@ -104,6 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_150sdp"
             android:background="@color/white"
+            android:id="@+id/color_layout"
             android:layout_marginTop="@dimen/_20sdp"
             android:orientation="horizontal">
             <RadioGroup
