--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -11,10 +11,6 @@
                 android:icon="@drawable/home"
                 android:title="Home"/>
 
-            <item
-                android:id="@+id/nav_profile"
-                android:icon="@drawable/uesr"
-                android:title="Profile"/>
 
             <item
                 android:id="@+id/nav_settings"
@@ -35,13 +31,16 @@
 
             <item
                 android:id="@+id/nav_feedback"
-                android:title="Feedback"
-                android:icon="@drawable/feedback"/>
+                android:icon="@drawable/dev"
+                android:title="Developers"/>
 
             <item
                 android:id="@+id/nav_share"
-                android:title="Share"
-                android:icon="@drawable/share"/>
+                android:title="Karan A. Bankar"/>
+
+            <item
+                android:id="@+id/nav_shar"
+                android:title="Chaitanya S. Kakde"/>
 
         </menu>
     </item>
