--- a/app/src/main/res/layout/activity_question_papre_pdf.xml
+++ b/app/src/main/res/layout/activity_question_papre_pdf.xml
@@ -20,6 +20,7 @@
 
         <WebView
             android:id="@+id/webView"
+            android:backgroundTint="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
