--- a/app/src/main/res/layout/activity_syllabus_pdf.xml
+++ b/app/src/main/res/layout/activity_syllabus_pdf.xml
@@ -29,6 +29,7 @@
         android:layout_height="@dimen/_250sdp"
         app:strokeColor="@color/primary"
         app:strokeWidth="@dimen/_1sdp"
+        android:backgroundTint="@color/white"
         app:cardCornerRadius="@dimen/_20sdp"
         android:layout_margin="@dimen/_60sdp">
 
