--- a/app/src/main/res/layout/activity_test_one.xml
+++ b/app/src/main/res/layout/activity_test_one.xml
@@ -42,6 +42,7 @@
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_gravity="center"
+            android:backgroundTint="@color/white"
             android:layout_marginLeft="-10dp"
             app:cardCornerRadius="@dimen/_10sdp">
 
