--- a/app/src/main/res/layout/activity_syllabus_pdf.xml
+++ b/app/src/main/res/layout/activity_syllabus_pdf.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Download Syllabus"
+        android:layout_marginTop="@dimen/_10sdp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="@dimen/_20sdp"
