--- a/app/src/main/res/layout/activity_chalu_ghada_modi.xml
+++ b/app/src/main/res/layout/activity_chalu_ghada_modi.xml
@@ -92,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Question will appear here"
+                android:textIsSelectable="true"
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
