--- a/app/src/main/res/layout/activity_test_three.xml
+++ b/app/src/main/res/layout/activity_test_three.xml
@@ -94,6 +94,7 @@
                 android:text="Question will appear here"
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold"
+                android:textIsSelectable="true"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:padding="16dp" />
